hphp/hack/test/typecheck/array_unification/darray.php.exp
File "darray.php", line 24, characters 10-26:
Invalid return type (Typing[4110])
  File "darray.php", line 23, characters 44-47:
  Expected `bool`
  File "darray.php", line 24, characters 10-26:
  But got `dict<int, bool>`
